public class Player : IPlayer {
    public int Id {get; private set;}
    public string Name {get; private set;}
    //kalau mau ada method
    public void AddPlayer() {
        //add player
    }
}