public interface IHero {
    public int HeroId {get;}
}